// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Breadcrumbs> Snapshot renders collapsed breadcrumbs correctly 1`] = `
.c1 {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  overflow: hidden;
}

.c1:before {
  content: ">";
  -webkit-transform: scaleX(0.5);
  -ms-transform: scaleX(0.5);
  transform: scaleX(0.5);
  opacity: 0.5;
  padding: 0 4px;
}

.c1 a {
  white-space: nowrap;
  text-overflow: ellipsis;
  color: inherit;
}

.c1:first-child:before {
  content: none;
}

.c0 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  padding: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-family: "Avenir Next","Metropolis","Helvetica Neue",Arial,sans-serif,-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  height: inherit;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

<ol
  className="c0"
>
  <li
    className="c1"
    onClick={[Function]}
  >
    Test 1
  </li>
  <li
    className="c1"
    onClick={[Function]}
  >
    ...
  </li>
  <li
    className="c1"
    onClick={[Function]}
  >
    Testing a really lon...
  </li>
</ol>
`;

exports[`<Breadcrumbs> Snapshot renders expanded breadcrumbs correctly 1`] = `
.c1 {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  overflow: hidden;
}

.c1:before {
  content: ">";
  -webkit-transform: scaleX(0.5);
  -ms-transform: scaleX(0.5);
  transform: scaleX(0.5);
  opacity: 0.5;
  padding: 0 4px;
}

.c1 a {
  white-space: nowrap;
  text-overflow: ellipsis;
  color: inherit;
}

.c1:first-child:before {
  content: none;
}

.c0 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  padding: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-family: "Avenir Next","Metropolis","Helvetica Neue",Arial,sans-serif,-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  height: inherit;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

<ol
  className="c0"
>
  <li
    className="c1"
    onClick={[Function]}
  >
    Test 1
  </li>
  <li
    className="c1"
    onClick={[Function]}
  >
    Test 2
  </li>
  <li
    className="c1"
    onClick={[Function]}
  >
    Test 3
  </li>
  <li
    className="c1"
    onClick={[Function]}
  >
    Testing a really lon...
  </li>
</ol>
`;
